<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/table_analyze"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleTime"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_time" />

        <TextView
            android:id="@+id/textValueTime"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleEvents"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_events" />

        <TextView
            android:id="@+id/textValueEvents"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleEventFrequency"
            style="@style/header_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/act_anal_freq" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleAverage"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_average" />

        <TextView
            android:id="@+id/textValueAverage"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleRmsVar"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_rmsvar" />

        <TextView
            android:id="@+id/textValueRmsVar"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleMax"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_max" />

        <TextView
            android:id="@+id/textValueMax"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleMin"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_min" />

        <TextView
            android:id="@+id/textValueMin"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

</TableLayout>